--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,16 @@ dependencies:
   uuid: ^3.0.6
   synchronized: ^3.0.0+3
   protobuf: ^2.1.0
-  flutter_webrtc: 0.9.32
+  flutter_webrtc:
+    git:
+      url: https://github.com/Parfyonator/flutter-webrtc.git
+      ref: a15e52fcf021b81daa6f4a9e541352897cf957dc
   flutter_window_close: ^0.2.2
   device_info_plus: ^9.0.0
-  webrtc_interface: 1.0.13
+  webrtc_interface:
+    git:
+      url: https://github.com/Parfyonator/webrtc-interface.git
+      ref: 1eeddaaec43003bef4cc72cc9527076b14bb7765
   dart_webrtc: 1.0.16
   js: ^0.6.4
   platform_detect: ^2.0.7
